// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NestedList.svelte > should render empty nested list 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
/>
`;

exports[`NestedList.svelte > should render nested items 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should render open items 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  <li>
    <ul
      class="nested-list flex flex-col w-full list"
    >
      <li
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0"
        id="id-0-0"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </li>
       
      
    </ul>
     
  </li>
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should render using default field mapping 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should render using field mappings 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should render with hierarchy 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0"
    id="id-0-0"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  <li>
    <ul
      class="nested-list flex flex-col w-full list"
    >
      <li
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0,0"
        id="id-0-0-0"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </li>
       
      
    </ul>
     
  </li>
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,1"
    id="id-0-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,2"
    id="id-0-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should render with hierarchy 2`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,0"
    id="id-0-0-0"
  >
    <icon
      aria-label="collapse"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-opened"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  <li>
    <ul
      class="nested-list flex flex-col w-full list"
    >
      <li
        class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
        data-path="0,0,0,0"
        id="id-0-0-0-0"
      >
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-last"
        >
          <i
            class="border-r"
          />
           
          <i
            class="border-b"
          />
          
        </span>
        
        <span
          class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
        />
        
         
        <item>
          
           
          <p>
            aa
          </p>
          
        </item>
      </li>
       
      
    </ul>
     
  </li>
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,1"
    id="id-0-0-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0,0,2"
    id="id-0-0-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should support custom icons 1`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;

exports[`NestedList.svelte > should support custom icons 2`] = `
<ul
  class="nested-list flex flex-col w-full list"
>
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="0"
    id="id-0"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        a
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="1"
    id="id-1"
  >
    <span
      class="grid grid-rows-2 grid-cols-2 h-full min-w-4 w-4 line-empty"
    />
    
     
    <item>
      
       
      <p>
        b
      </p>
      
    </item>
  </li>
   
  
  <li
    class="node min-h-5 flex flex-row cursor-pointer select-none items-center"
    data-path="2"
    id="id-2"
  >
    <icon
      aria-label="expand"
      class="flex flex-shrink-0 items-center justify-center small w-4"
      role="img"
      tabindex="-1"
    >
      <i
        aria-hidden="true"
        class="node-closed"
      />
    </icon>
    
     
    <item>
      
       
      <p>
        c
      </p>
      
    </item>
  </li>
   
  
</ul>
`;
